kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: explorage
  labels:
    name: explorage
