kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorage-service
  namespace: explorage
  labels:
    app: explorage
spec:
  selector:
    app: explorage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
